[tool.poetry]
name = "easy-http-client"
version = "0.1.0"
description = ""
authors = ["Stefano Gherardi <s.gherardi@bytesrl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
